Fix product findUnique by Id or Name endpoint
